# backend-rs

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  DockerFile  init.sql
migrations/: 20250701_init_pg.sql
migrations/20250701/: down.sql  up.sql
src/: auth.rs  db.rs  files.rs  main.rs  migrate.rs  models.rs  utils.rs
